--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
 <html>
+    <style>
+        td {
+            border-style: dotted;
+            border-color: blueviolet;
+            font-size: 30px;
+        }
+        input {
+            font-size: 30px;
+        }
+        table {
+            background-color: cadetblue;
+        }
+    </style>
     <script type="text/javascript">
         function funk() {
             var x = parseFloat(this.ta.value)
@@ -18,7 +31,7 @@
     </script>
     <body>
         <form>
-    <table>
+    <table width="100%" style="border-style: dotted; border-color: blueviolet;">
         <tr>
     <td colspan="2">Left on pen:</td>
 </tr> 
