--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
         input {
             font-size: 45px;
         }
+        select {
+            font-size: 45px;
+        }
         table {
             background-color: cadetblue;
         }
     </style>
     <script type="text/javascript">
         function funk() {
+            alert(this.ta.value)
             var x = parseFloat(this.ta.value)
             var y = parseFloat(this.tb.value)
             var a = parseInt(this.ca.value)
@@ -36,17 +40,65 @@
     <td colspan="2">Left on pen:</td>
 </tr> 
 <tr>
-    <td>Number:</td><td><input id="ta" type="text" size="20" /></td>
-</tr>
-<tr>
-    <td>clicks past number:</td><td><input id="ca" type="text" size="20" /></td> 
-</tr>    
+    <tr><td>Number:</td>
+        <td>
+            <select id="ta">
+                <option value="0.6">0.6</option>
+                <option value="1.2">1.2</option>
+                <option value="1.8">1.8</option>
+                <option value="2.4">2.4</option>
+                <option value="3.0">3.0</option>
+            </select>
+        </td>
+    </tr>
+    <tr><td>clicks past number:</td>
+        <td>
+            <select id="ca">
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+            </select>
+        </td>
+    </tr>    
 <tr><td>Desired dosage:</td></tr>
-<tr><td>Number:</td><td><input id="tb" type="text" size="20" /></td></tr>
-<tr><td>clicks past number:</td><td><input id="cb" type="text" size="20" /></td></tr>
+<tr><td>Number:</td>
+    <td>
+        <select id="tb">
+            <option value="0.6">0.6</option>
+            <option value="1.2">1.2</option>
+            <option value="1.8">1.8</option>
+            <option value="2.4">2.4</option>
+            <option value="3.0">3.0</option>
+        </select>
+    </td>
+</tr>
+<tr><td>clicks past number:</td>
+    <td>
+        <select id="cb">
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+        </select>
+    </td>
+</tr>
 <tr><td colspan="2"><input type="button" value="calculate" name="calculate" onclick="funk(this)" /></td></tr>
     </table>
 </form>
-        v0.1
 </body>
 </html>
