--- a/index.html
+++ b/index.html
@@ -1,111 +1,6 @@
 <html>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        td {
-            border-style: groove;
-            border-width: 8px;
-            border-color: olivedrab;
-            font-size: 32px;
 
-        }
-        input {
-            font-size: 32px;
-        }
-        select {
-            font-size: 32px;
-        }
-        table {
-            background-color: darkcyan;
-        }
-    </style>
-    <script type="text/javascript">
-        function funk() {
-            let x = parseFloat(this.ta.value)
-            let y = parseFloat(this.tb.value)
-            let a = parseInt(this.ca.value)
-            let b = parseInt(this.cb.value)
-            
-            let clicks = b - a;
-            let dosage = y - x;
-
-            if (clicks < 0) {
-                clicks = 10 + clicks;
-                dosage -= 0.6;
-            }
-            this.output.textContent = parseFloat(dosage+"").toFixed(2) + ", clicks over: " + (clicks);
-ß        }
-    </script>
     <body>
-        <form>
-    <table width="100%" style="border-style: dotted; border-color: blueviolet;">
-        <tr>
-            <td>
-                IMPORTANT!<br />
-                This is educational software. By using this software, you understand the following:
-                The creator of this page does not take any responsibilities for any consequences
-                of using the results given on this page.
-            </td>
-        </tr>
-        <tr>
-    <td>Left on pen:</td>
-</tr> 
-<tr>
-    <tr>
-        <td align="center">
-            <select id="ta">
-                <option value="0.0">0.0</option>
-                <option value="0.6">0.6</option>
-                <option value="1.2">1.2</option>
-                <option value="1.8">1.8</option>
-                <option value="2.4">2.4</option>
-                <option value="3.0">3.0</option>
-            </select>
-            Clicks over:
-            <select id="ca">
-                <option value="0">0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-            </select>
-        </td>
-    </tr>    
-<tr><td>Desired dosage:</td></tr>
-<tr>
-    <td align="center">
-        <select id="tb">
-            <option value="0.6">0.6</option>
-            <option value="1.2">1.2</option>
-            <option value="1.8">1.8</option>
-            <option value="2.4">2.4</option>
-            <option value="3.0">3.0</option>
-        </select>
-        Clicks over:
-        <select id="cb">
-            <option value="0">0</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-        </select>
-    </td>
-</tr>
-<tr><td align="center"><input type="button" value="calculate" name="calculate" onclick="funk(this)" /></td></tr>
-<tr><td>Result:<br/><span id="output"></span></td></tr>
-    </table>
-</form>
-        v0.6
-</body>
+        <a href="trunkfriends/index.html">Trunkfriends</a>
+    </body>
 </html>
