--- a/trunkfriends/index.html
+++ b/trunkfriends/index.html
@@ -2,8 +2,33 @@
     <img src="img/trunkbanner.png" alt="banner" width="40%"/>
 </div>
 <p>
-    This page will be the main info page for Trunkfriends. For now, it will only contain the weekly update / changelog
+    TrunkFiends is a "friends management interface".
 </p>
 <p>
-    <a href="changelog.html">Changelog</a>
+    It lets you keep a history of your connection to people you follow and who follow you.
+    By scanning your followers / following lists, and comparing it to how it was at previous scan,
+    you can keep track of who friended you at what point in time, when they unfollowed you, when you unfollowed them,
+    etc.
 </p>
+<p>
+    Please note that this is a preliminary page. Things will improve, this project is still in early starting phase.
+    This page will be the main info page for Trunkfriends. For now, it will only contain the weekly update / changelog,
+    a simple usage manual and install files.
+</p>
+<p>
+    The project is open source and public domain. The artwork is excluded, the artist retains the copyright,
+    and it is used with permission.
+</p>
+<ul>
+    <li><a href="project_updates.html">Changelog</a></li>
+    <li><a href="install_win.html">Window installation files (MSI package)</a></li>
+    <li><a href="install_deb.html">Debian & flavours (Ubuntu, etc.) installation files (deb package)</a></li>
+</ul>
+<p>
+    Documents not migrated yet:
+</p>
+<ul>
+    <li><a href="https://github.com/steinareliassen/trunkfriends/blob/main/docs/using.md">Using Trunkfriends.</a></li>
+    <li><a href="https://github.com/steinareliassen/trunkfriends/blob/main/README.md">Project README</a></li>
+</ul>
+
