Missed link to linux install page

--- a/trunkfriends/project_updates.html
+++ b/trunkfriends/project_updates.html
@@ -10,8 +10,8 @@
 <p>
 <ul>
     <li>
-        Release packages has been built for <a href="install_win.html">windows</a> and linux. Click on OS to get
-        to the info on where to obtain and how to install the packages
+        Release packages has been built for <a href="install_win.html">windows</a> and <a href="install_deb.html">linux.</a>
+        Click on OS to get to the info on where to obtain and how to install the packages
     </li>
     <li>
         A few bugs have been fixed, it is now not possible to select a server instance when importing followers.
