--- a/trunkfriends/project_updates.html
+++ b/trunkfriends/project_updates.html
@@ -5,6 +5,62 @@
     <a href="index.html">Back to main page</a>
 </p>
 <p>
+31/12-2023:
+</p>
+<p>
+<ul>
+    <li>
+        A number of new features have been merged to master branch. If you have cloned Trunkfriends from git
+        and run it from there, you can pull and get the features directly. If you run it from a downloaded
+        zip file, you can simply replace it with a newly downloaded zip file.
+    </li>
+    <li>
+        Install file for Windows / Debian (and flavours like Ubuntu) will be packaged shortly.
+        As an alternative to install files, JAR archives will be provided, offering the possibility
+        to run Trunkfriends easily without installing anything, as long as you have Java installed.
+        This will most likely give a way to run Trunkfriends on OSX without needing to run from source.
+    </li>
+    <li>
+        Some new features, like unfollow / follow accounts and add accounts to list, require a
+        read/write/follow token, while tokens until now have been pure read tokens. If you want to
+        use this functionality, you must obtain a new token. Select the server first, and click the
+        menu button and select "obtain new token".
+    </li>
+    <li>
+        You get a new view where following / follower accounts are listed, not grouped by
+        when they follow / unfollow like the history overview, but each account appearing only
+        once in the list. This list can be sorted and searched, a handy overview for instance to
+        find all follower on a given domain. Just like in history view, you can zoom in on
+        one account and see all follow / unfollow events for this account, and you can click a
+        checkbox to add it to a "bad", and from there copy the accounts you have selected onto
+        clipboard
+    </li>
+    <li>
+        You get a manage follower view, where you can unfollow / follow accounts, and add accounts
+        to a given list. You can either enter accounts manually in the text field and apply
+        action to them, paste from clipboard, or simply insert selected accounts from the "bag"
+        If you have one account on an instance where you have lost people you follow due to
+        defederation, and another one where you want to follow them, simply go to the first
+        account, select the addresses you want to follow, and switch to the other account,
+        go to "manage followers", and click "insert from bag" and then "follow selected"
+    </li>
+    <li>
+        The Manage Follower view indicates the direction I want to take Trunkfriends. While
+        the ability to see if you have lost friends as a result of defederation has been
+        the reason Trunkfriends was made, it would be nice if the app had some more useful
+        aspects that were not quite so depressive. In coming releases, I will add functionality
+        to help you manage your followers, your lists, your blocks, etc.
+    </li>
+    <li>
+        A gentle reminder though, Trunkfriends is still regarded to be alpha state. This means
+        the testing and quality is not deemed "production ready". If you do not feel comfortable
+        with Trunkfriends having write / follow access to your account, do not obtain new token,
+        the old one will work fine as long as you don't use the "manage account" functions. Take care
+        using the "manage account" functions, look over what Trunkfriends tells you it will do.
+        The functionality has been tested through several times, but issues may still exist.
+    </li>
+</ul>
+<p>
 11/11-2023:
 </p>
 <p>
