Main, not master

--- a/trunkfriends/project_updates.html
+++ b/trunkfriends/project_updates.html
@@ -10,7 +10,7 @@
 <p>
 <ul>
     <li>
-        A number of new features have been merged to master branch. If you have cloned Trunkfriends from git
+        A number of new features have been merged to main branch. If you have cloned Trunkfriends from git
         and run it from there, you can pull and get the features directly. If you run it from a downloaded
         zip file, you can simply replace it with a newly downloaded zip file.
     </li>
