--- a/trunkfriends/index.html
+++ b/trunkfriends/index.html
@@ -1,34 +1,100 @@
+<html lang="uk">
+<head>
+    <title>Trunkfriends</title>
+    <link rel="stylesheet" href="css/layout.css">
+</head>
+<body>
+
 <div align="center">
     <img src="img/trunkbanner.png" alt="banner" width="40%"/>
-</div>
-<p>
-    TrunkFiends is a "friends management interface".
-</p>
-<p>
-    It lets you keep a history of your connection to people you follow and who follow you.
-    By scanning your followers / following lists, and comparing it to how it was at previous scan,
-    you can keep track of who friended you at what point in time, when they unfollowed you, when you unfollowed them,
-    etc.
-</p>
-<p>
-    Please note that this is a preliminary page. Things will improve, this project is still in early starting phase.
-    This page will be the main info page for Trunkfriends. For now, it will only contain the weekly update / changelog,
-    a simple usage manual and install files.
-</p>
-<p>
-    The project is open source and public domain. The artwork is excluded, the artist retains the copyright,
-    and it is used with permission.
-</p>
-<ul>
-    <li><a href="project_updates.html">Changelog</a></li>
-    <li><a href="install_win.html">Window installation files (MSI package)</a></li>
-    <li><a href="install_deb.html">Debian & flavours (Ubuntu, etc.) installation files (deb package)</a></li>
-</ul>
-<p>
-    Documents not migrated yet:
-</p>
-<ul>
-    <li><a href="https://github.com/steinareliassen/trunkfriends/blob/main/docs/using.md">Using Trunkfriends.</a></li>
-    <li><a href="https://github.com/steinareliassen/trunkfriends/blob/main/README.md">Project README</a></li>
-</ul>
 
+    <p>
+    </p>
+    <table class="outer">
+        <tr>
+            <td class="side">
+                <table>
+                    <tr>
+                        <td class="large">
+                            <a href="project_updates.html">Important updates</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="large">
+                            <a href="using.html">Using trunkfriends</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="large">
+                            <a href="install_win.html">Window installation files (MSI package)</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="large">
+                            <a href="install_osx.html">OSX files (JAR package)</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="large">
+                            <a href="install_deb.html">Debian & flavours (Ubuntu, etc.) installation files (deb
+                                package)</a>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+            <td class="main">
+                <table class="inner">
+                    <tr>
+                        <td class="head">
+                            <div align="center">
+                            Trunkfiends is a "friends management interface".
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="body">
+                            It lets you keep a history of your connection to people you follow and who follow you.
+                            By scanning your followers / following lists, and comparing it to how it was at previous
+                            scan,
+                            you can keep track of who friended you at what point in time, when they unfollowed you, when
+                            you
+                            unfollowed them,
+                            etc.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="body">
+                            Please note that this is a preliminary page. Things will improve, this project is still in
+                            early starting phase.
+                            This page will be the main info page for Trunkfriends. For now, it will only contain the
+                            weekly update / changelog, a simple usage manual and install files.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="body">
+                            The project is open source and public domain. The artwork is excluded, the artist retains
+                            the copyright, and it is used with permission.
+                            This project comes with no warranty, use as is.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="body">
+                            <p>
+                                Documents not migrated yet:
+                            </p>
+                            <ul>
+                                <li><a href="https://github.com/steinareliassen/trunkfriends/blob/main/README.md">Project
+                                    README</a>
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+
+            </td>
+        </tr>
+
+    </table>
+</div>
+</body>
+</html>
