--- a/trunkfriends/install_win.html
+++ b/trunkfriends/install_win.html
@@ -1,24 +1,97 @@
+<html lang="uk">
+<head>
+    <title>Trunkfriends</title>
+    <link rel="stylesheet" href="css/layout.css">
+</head>
+<body>
 <div align="center">
     <img src="img/trunkbanner.png" alt="banner" width="40%"/>
+    <p>
+    </p>
+    <table class="outer">
+        <tr>
+            <td class="side">
+                <table>
+                    <tr>
+                        <td class="larger">
+                            <a href="index.html">
+                                <div width="100%">
+                                    Home
+                                </div>
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="large">
+                            <a href="project_updates.html">Important updates</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="large">
+                            <a href="using.html">Using trunkfriends</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="large">
+                            <a href="install_win.html">Window installation files (MSI package)</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="large">
+                            <a href="install_osx.html">OSX files (JAR package)</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="large">
+                            <a href="install_deb.html">Debian & flavours (Ubuntu, etc.) installation files (deb
+                                package)</a>
+                        </td>
+                    </tr>
+                </table>
+            </td> <!-- end side -->
+            <td class="main">
+                <table class="inner">
+                    <tr>
+                        <td class="head">
+                            <div align="center">
+                                Setting up Trunkfriends on Windows.
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="body">
+                            <p>
+                                Project is now in version 0.4, but install files for windows are still in 0.3. The machine I used to
+                                build windows install files is broken. A new has been ordered and once it arrives (1-2 weeks?),
+                                new install files for windows will be built. You can use 0.3 until then and easily upgrade when 0.4
+                                comes out.
+                            </p>
+                            <ul>
+                            <li>
+                                Download and run <a href="https://github.com/steinareliassen/trunkfriends/releases/download/0.3msi/Trunkfriends-0.3.0.msi">
+                                Trunkfriends-0.3.0.msi</a>. The installation should be pretty straight forward, and Trunkfriends should be on
+                                the start menu.
+                            </li>
+                            <li>
+                                Do not worry about uninstalling Trunkfriends to install a new version, your data is not removed. The data
+                                will be in your user home folder, under a folder called .trunkfriends, and it can be a good idea to keep
+                                a backup of this folder if you want to make sure not to lose data.
+                            </li>
+                            <li>
+                                If you already run Trunkfriends from source, the data is stored in the same location, just install and keep
+                                using. If there are any issues at all, do not hesitate to send a private message to
+                                <a href="https://mastodon.social/@trunkfriends">mastodon.social/@trunkfriends</a>!
+                            </li>
+                        </ul>
+                        </td>
+                    </tr>
+                </table>
+
+            </td>
+        </tr>
+
+    </table>
 </div>
-<p>
-    <a href="index.html">Back to main page</a>
-</p>
-<p>
-<ul>
-    <li>
-        Download and run <a href="https://github.com/steinareliassen/trunkfriends/releases/download/0.3msi/Trunkfriends-0.3.0.msi">
-        Trunkfriends-0.3.0.msi</a>. The installation should be pretty straight forward, and Trunkfriends should be on
-        the start menu.
-    </li>
-    <li>
-        Do not worry about uninstalling Trunkfriends to install a new version, your data is not removed. The data
-        will be in your user home folder, under a folder called .trunkfriends, and it can be a good idea to keep
-        a backup of this folder if you want to make sure not to lose data.
-    </li>
-    <li>
-        If you already run Trunkfriends from source, the data is stored in the same location, just install and keep
-        using. If there are any issues at all, do not hesitate to send a private message to
-        <a href="https://mastodon.social/@trunkfriends">mastodon.social/@trunkfriends</a>!
-    </li>
-</ul>
+</body>
+</html>
+
