--- a/trunkfriends/project_updates.html
+++ b/trunkfriends/project_updates.html
@@ -1,95 +1,167 @@
+<html lang="uk">
+<head>
+    <title>Trunkfriends</title>
+    <link rel="stylesheet" href="css/layout.css">
+</head>
+<body>
+
 <div align="center">
 <img src="img/trunkbanner.png" alt="banner" width="40%"/>
+    <p>
+    </p>
+<table class="outer">
+    <tr>
+        <td class="side">
+            <table>
+                <tr>
+                    <td class="larger">
+                        <a href="index.html">
+                            <div width="100%">
+                                Home
+                            </div>
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="large">
+                        <a href="project_updates.html">Important updates</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="large">
+                        <a href="using.html">Using trunkfriends</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="large">
+                        <a href="install_win.html">Window installation files (MSI package)</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="large">
+                        <a href="install_osx.html">OSX files (JAR package)</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="large">
+                        <a href="install_deb.html">Debian & flavours (Ubuntu, etc.) installation files (deb
+                            package)</a>
+                    </td>
+                </tr>
+            </table>
+        </td> <!-- end side -->
+        <td class="main">
+            <table class="inner">
+                <tr>
+                    <td class="head">
+                        <div align="center">
+                            Important updates
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="body">
+                        <p>
+                            31/12-2023:
+                        </p>
+                        <p>
+                        <ul>
+                            <li>
+                                A number of new features have been merged to main branch. If you have cloned Trunkfriends from git
+                                and run it from there, you can pull and get the features directly. If you run it from a downloaded
+                                zip file, you can simply replace it with a newly downloaded zip file.
+                            </li>
+                            <li>
+                                Install file for Windows / Debian (and flavours like Ubuntu) will be packaged shortly.
+                                As an alternative to install files, JAR archives will be provided, offering the possibility
+                                to run Trunkfriends easily without installing anything, as long as you have Java installed.
+                                This will most likely give a way to run Trunkfriends on OSX without needing to run from source.
+                            </li>
+                            <li>
+                                Some new features, like unfollow / follow accounts and add accounts to list, require a
+                                read/write/follow token, while tokens until now have been pure read tokens. If you want to
+                                use this functionality, you must obtain a new token. Select the server first, and click the
+                                menu button and select "obtain new token".
+                            </li>
+                            <li>
+                                You get a new view where following / follower accounts are listed, not grouped by
+                                when they follow / unfollow like the history overview, but each account appearing only
+                                once in the list. This list can be sorted and searched, a handy overview for instance to
+                                find all follower on a given domain. Just like in history view, you can zoom in on
+                                one account and see all follow / unfollow events for this account, and you can click a
+                                checkbox to add it to a "bad", and from there copy the accounts you have selected onto
+                                clipboard
+                            </li>
+                            <li>
+                                You get a manage follower view, where you can unfollow / follow accounts, and add accounts
+                                to a given list. You can either enter accounts manually in the text field and apply
+                                action to them, paste from clipboard, or simply insert selected accounts from the "bag"
+                                If you have one account on an instance where you have lost people you follow due to
+                                defederation, and another one where you want to follow them, simply go to the first
+                                account, select the addresses you want to follow, and switch to the other account,
+                                go to "manage followers", and click "insert from bag" and then "follow selected"
+                            </li>
+                            <li>
+                                The Manage Follower view indicates the direction I want to take Trunkfriends. While
+                                the ability to see if you have lost friends as a result of defederation has been
+                                the reason Trunkfriends was made, it would be nice if the app had some more useful
+                                aspects that were not quite so depressive. In coming releases, I will add functionality
+                                to help you manage your followers, your lists, your blocks, etc.
+                            </li>
+                            <li>
+                                A gentle reminder though, Trunkfriends is still regarded to be alpha state. This means
+                                the testing and quality is not deemed "production ready". If you do not feel comfortable
+                                with Trunkfriends having write / follow access to your account, do not obtain new token,
+                                the old one will work fine as long as you don't use the "manage account" functions. Take care
+                                using the "manage account" functions, look over what Trunkfriends tells you it will do.
+                                The functionality has been tested through several times, but issues may still exist.
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="body">
+                        <p>
+                            11/11-2023:
+                        </p>
+                        <p>
+                        <ul>
+                            <li>
+                                Release packages has been built for <a href="install_win.html">windows</a> and <a href="install_deb.html">linux.</a>
+                                Click on OS to get to the info on where to obtain and how to install the packages
+                            </li>
+                            <li>
+                                A few bugs have been fixed, it is now not possible to select a server instance when importing followers.
+                                In the history view, when zooming in on a user and not being on the first page in a multipage history view,
+                                the application crashed. This is now fixed, and zoom should work properly.
+                            </li>
+                            <li>
+                                As this application was written in quite a rushed fashion, while at the same time trying to understand
+                                how things are supposed to be done in Jetpack Compose (the UI framework used), the application suffers
+                                from overly messy code. Some tidy up have been done, but lots remains, focus was on making the code for
+                                history overview a bit more tidy. Tidy code = less likely to be buggy!
+                            </li>
+                            <li>
+                                Next on the menu is:
+                                <ul>
+                                    <li>The ability to select one or more usernames, and copy these onto the clipboard. This way,
+                                        you can take them to the mastodon UI and paste them into follow them. Handy if you have migrated
+                                        and want to reconnect with lost connections.</li>
+                                    <li>This is the first step towards the next goal of Trunkfriends, managing your followers and lists
+                                        more easily than you can in the UI. This is also on the menu, but a bit further up.</li>
+                                    <li>More code cleanup.</li>
+                                    <li>Tooltip</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+
+        </td>
+    </tr>
+
+</table>
 </div>
-<p>
-    <a href="index.html">Back to main page</a>
-</p>
-<p>
-31/12-2023:
-</p>
-<p>
-<ul>
-    <li>
-        A number of new features have been merged to main branch. If you have cloned Trunkfriends from git
-        and run it from there, you can pull and get the features directly. If you run it from a downloaded
-        zip file, you can simply replace it with a newly downloaded zip file.
-    </li>
-    <li>
-        Install file for Windows / Debian (and flavours like Ubuntu) will be packaged shortly.
-        As an alternative to install files, JAR archives will be provided, offering the possibility
-        to run Trunkfriends easily without installing anything, as long as you have Java installed.
-        This will most likely give a way to run Trunkfriends on OSX without needing to run from source.
-    </li>
-    <li>
-        Some new features, like unfollow / follow accounts and add accounts to list, require a
-        read/write/follow token, while tokens until now have been pure read tokens. If you want to
-        use this functionality, you must obtain a new token. Select the server first, and click the
-        menu button and select "obtain new token".
-    </li>
-    <li>
-        You get a new view where following / follower accounts are listed, not grouped by
-        when they follow / unfollow like the history overview, but each account appearing only
-        once in the list. This list can be sorted and searched, a handy overview for instance to
-        find all follower on a given domain. Just like in history view, you can zoom in on
-        one account and see all follow / unfollow events for this account, and you can click a
-        checkbox to add it to a "bad", and from there copy the accounts you have selected onto
-        clipboard
-    </li>
-    <li>
-        You get a manage follower view, where you can unfollow / follow accounts, and add accounts
-        to a given list. You can either enter accounts manually in the text field and apply
-        action to them, paste from clipboard, or simply insert selected accounts from the "bag"
-        If you have one account on an instance where you have lost people you follow due to
-        defederation, and another one where you want to follow them, simply go to the first
-        account, select the addresses you want to follow, and switch to the other account,
-        go to "manage followers", and click "insert from bag" and then "follow selected"
-    </li>
-    <li>
-        The Manage Follower view indicates the direction I want to take Trunkfriends. While
-        the ability to see if you have lost friends as a result of defederation has been
-        the reason Trunkfriends was made, it would be nice if the app had some more useful
-        aspects that were not quite so depressive. In coming releases, I will add functionality
-        to help you manage your followers, your lists, your blocks, etc.
-    </li>
-    <li>
-        A gentle reminder though, Trunkfriends is still regarded to be alpha state. This means
-        the testing and quality is not deemed "production ready". If you do not feel comfortable
-        with Trunkfriends having write / follow access to your account, do not obtain new token,
-        the old one will work fine as long as you don't use the "manage account" functions. Take care
-        using the "manage account" functions, look over what Trunkfriends tells you it will do.
-        The functionality has been tested through several times, but issues may still exist.
-    </li>
-</ul>
-<p>
-11/11-2023:
-</p>
-<p>
-<ul>
-    <li>
-        Release packages has been built for <a href="install_win.html">windows</a> and <a href="install_deb.html">linux.</a>
-        Click on OS to get to the info on where to obtain and how to install the packages
-    </li>
-    <li>
-        A few bugs have been fixed, it is now not possible to select a server instance when importing followers.
-        In the history view, when zooming in on a user and not being on the first page in a multipage history view,
-        the application crashed. This is now fixed, and zoom should work properly.
-    </li>
-    <li>
-        As this application was written in quite a rushed fashion, while at the same time trying to understand
-        how things are supposed to be done in Jetpack Compose (the UI framework used), the application suffers
-        from overly messy code. Some tidy up have been done, but lots remains, focus was on making the code for
-        history overview a bit more tidy. Tidy code = less likely to be buggy!
-    </li>
-    <li>
-        Next on the menu is:
-        <ul>
-            <li>The ability to select one or more usernames, and copy these onto the clipboard. This way,
-            you can take them to the mastodon UI and paste them into follow them. Handy if you have migrated
-            and want to reconnect with lost connections.</li>
-            <li>This is the first step towards the next goal of Trunkfriends, managing your followers and lists
-            more easily than you can in the UI. This is also on the menu, but a bit further up.</li>
-            <li>More code cleanup.</li>
-            <li>Tooltip</li>
-        </ul>
-    </li>
-</ul>
+</body>
+</html>
